--- a/making-some-changes/style.css
+++ b/making-some-changes/style.css
@@ -1,13 +1,67 @@
+/* css reset */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+    font-family: arial;
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
 .navbar-expand-lg.bg-body-tertiary { background-color: #DDD !important; }
 
 .nav-link { 
     color: #BD4150 !important; 
     font-style: bold !important;
     font-size: 24px;
-    padding-left: 50px !important;
+    padding: 10px 50px !important;
+    border-radius: 5px;
 }
 
-.nav-link:hover { color: #FF8086 !important;  }
+.nav-item { text-align: center;}
+
+.nav-link:hover { color: #FF8086 !important; }
+
+.nav-link.active {
+    background-color: #BD4150 !important;
+    color: #DDD !important;
+}
 
 .navbar-brand img { 
     height: 60px;
