--- a/making-some-changes/style.css
+++ b/making-some-changes/style.css
@@ -44,6 +44,8 @@ table {
 	border-spacing: 0;
 }
 
+/* ----------- NAVBAR ---------- */
+
 .navbar-expand-lg.bg-body-tertiary { 
 	background-color: #DDD !important; 
 	box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
@@ -52,7 +54,7 @@ table {
 .nav-link { 
     color: #BD4150 !important; 
     font-style: bold !important;
-    font-size: 24px;
+    font-size: 20px;
     padding: 10px 50px !important;
     border-radius: 5px;
 }
@@ -69,4 +71,37 @@ table {
 .navbar-brand img { 
     height: 60px;
     padding-left: 15px !important;
+}
+
+/* ----------- BANNER SECTION ---------- */
+#banner {
+	background-color: #BD4150;
+	color: #DDD;
+	padding-top: 5%;
+}
+
+#banner h1 {
+	font-size: 60px;
+	margin-top: 100px;
+}
+
+#banner p {
+	font-size: 18px;
+}
+
+#banner a {
+    background-color: #DDD !important;
+    color: #2E5C9A !important;
+	font-weight: bold;
+    border-radius: 150px;
+	border: 2px solid #8BB3EA;
+	margin-top: 30px;
+	padding: 10px;
+	text-decoration: none;
+}
+
+#banner a:hover {
+    background-color: #3F83E0 !important;
+    color: #DDD !important;
+	border: 2px solid #8BB3EA;
 }
