--- a/making-some-changes/style.css
+++ b/making-some-changes/style.css
@@ -77,8 +77,7 @@ table {
 #banner {
 	background-color: #BD4150;
 	color: #DDD;
-	padding-top: 5%;
-	padding-bottom: 5%;
+	padding-top: 3%;
 }
 
 #banner h1 {
@@ -88,7 +87,12 @@ table {
 
 #banner p {
 	font-size: 18px;
+	margin-bottom: 10px;
 }
+
+strong { 
+	font-weight: bold;
+	color: #f3f0f0; }
 
 #banner a {
     background-color: #DDD !important;
@@ -109,4 +113,16 @@ table {
     background-color: #3F83E0 !important;
     color: #DDD !important;
 	border: 2px solid #8BB3EA;
+}
+
+/* ----------- SKILL SECTION ---------- */
+#skill {
+	background-color: #DDD;
+	color: #BD4150;
+	padding-bottom: 5%;
+}
+
+#skill h1 {
+	font-size: 40px;
+	text-align: center;
 }
