--- a/making-some-changes/style.css
+++ b/making-some-changes/style.css
@@ -126,3 +126,20 @@ strong {
 	font-size: 40px;
 	text-align: center;
 }
+
+#skill h2 { 
+	margin-top: 3%;
+	margin-bottom: 5px;
+}
+
+#skill h2 span {
+	font-size: 18px;
+	background-color: #BD4150;
+    color: #DDD !important;
+	font-weight: bold;
+    border-radius: 150px;
+	border: 2px ;
+	padding: 10px;
+}
+
+#skill img { height: 80px;}
