--- a/making-some-changes/style.css
+++ b/making-some-changes/style.css
@@ -80,6 +80,10 @@ table {
 	padding-top: 3%;
 }
 
+#banner img {
+	width: 450px;
+}
+
 #banner h1 {
 	font-size: 60px;
 	margin-top: 100px;
@@ -92,7 +96,8 @@ table {
 
 strong { 
 	font-weight: bold;
-	color: #f3f0f0; }
+	color: #f3f0f0; 
+}
 
 #banner a {
     background-color: #DDD !important;
@@ -103,10 +108,6 @@ strong {
 	margin-top: 30px;
 	padding: 10px;
 	text-decoration: none;
-}
-
-#banner img {
-	width: 450px;
 }
 
 #banner a:hover {
@@ -129,7 +130,7 @@ strong {
 
 #skill h2 { 
 	margin-top: 3%;
-	margin-bottom: 5px;
+	margin-bottom: 8px;
 }
 
 #skill h2 span {
@@ -143,3 +144,20 @@ strong {
 }
 
 #skill img { height: 80px;}
+
+#skill a {
+    background-color: #DDD !important;
+    color: #2E5C9A !important;
+	font-weight: bold;
+    border-radius: 150px;
+	border: 2px solid #8BB3EA;
+	margin-top: 10%;
+	padding: 10px;
+	text-decoration: none;
+}
+
+#skill a:hover {
+    background-color: #3F83E0 !important;
+    color: #DDD !important;
+	border: 2px solid #8BB3EA;
+}
