--- a/making-some-changes/style.css
+++ b/making-some-changes/style.css
@@ -40,12 +40,12 @@ table {
 
 /* ----------- NAVBAR ---------- */
 
-.navbar-expand-lg.bg-body-tertiary { 
+#navbar .navbar-expand-lg.bg-body-tertiary { 
 	background-color: #DDD !important; 
 	box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
 }
 
-.nav-link { 
+#navbar .nav-link { 
     color: #BD4150 !important; 
     font-style: bold !important;
     font-size: 20px;
@@ -53,16 +53,16 @@ table {
     border-radius: 5px;
 }
 
-.nav-item { text-align: center;}
+#navbar .nav-item { text-align: center;}
 
-.nav-link:hover { color: #FF8086 !important; }
+#navbar .nav-link:hover { color: #FF8086 !important; }
 
-.nav-link.active {
+#navbar .nav-link.active {
     background-color: #BD4150 !important;
     color: #DDD !important;
 }
 
-.navbar-brand img { 
+#navbar .navbar-brand img { 
     height: 60px;
     padding-left: 15px !important;
 }
@@ -192,4 +192,28 @@ strong {
     background-color: #DDD !important;
     color: #BD4150 !important;
 	border: 1px solid #BD4150;
+}
+
+#projects .navbar-expand-lg.bg-body-tertiary { 
+	display: flex !important;
+	justify-content: center !important;
+	background-color: #D76B70 !important;
+}
+
+#projects .nav-link { 
+	background-color: #D76B70 !important; 
+    color: #BD4150 !important; 
+    font-style: bold !important;
+    font-size: 20px;
+    padding: 10px 50px !important;
+    border-radius: 5px;
+}
+
+#projects .nav-item { text-align: center;}
+
+#projects .nav-link:hover { color: #FF8086 !important; }
+
+#projects .nav-link.active-sort {
+    background-color: #BD4150;
+    color: #DDD !important;
 }
