--- a/style.css
+++ b/style.css
@@ -1,25 +1,219 @@
-.jumbotron {
-  padding-top: 7rem;
-  background-color: #ffffff;
+/* css reset */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section { display: block; }
+body {
+    font-family: Helvetica, Arial, sans-serif;
+	line-height: 1;
+}
+ol, ul { list-style: none; }
+blockquote, q {	quotes: none; }
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
-section {
-  padding-top: 5rem;
+/* ----------- NAVBAR ---------- */
+
+#navbar .navbar-expand-lg.bg-body-tertiary { 
+	background-color: #DDD !important; 
+	box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
 }
 
-#about {
-  background-color: #e2edff;
+#navbar .nav-link { 
+    color: #BD4150 !important; 
+    font-style: bold !important;
+    font-size: 20px;
+    padding: 10px 50px !important;
+    border-radius: 5px;
 }
 
-#experience {
-  background-color: #a2d9ff;
+#navbar .nav-item { text-align: center;}
+
+#navbar .nav-link:hover { color: #FF8086 !important; }
+
+#navbar .nav-link.active {
+    background-color: #BD4150 !important;
+    color: #DDD !important;
 }
 
+#navbar .navbar-brand img { 
+    height: 60px;
+    padding-left: 15px !important;
+}
+
+/* ----------- BANNER SECTION ---------- */
+#banner {
+	background-color: #BD4150;
+	color: #DDD;
+	padding-top: 3%;
+}
+
+#banner img { width: 450px; }
+
+#banner h1 {
+	font-size: 60px;
+	margin-top: 100px;
+}
+
+#banner p {
+	font-size: 18px;
+	margin-bottom: 10px;
+}
+
+strong { 
+	font-weight: bold;
+	color: #f3f0f0; 
+}
+
+#button {
+    background-color: #DDD !important;
+    color: #2E5C9A !important;
+	font-weight: bold;
+    border-radius: 150px;
+	border: 2px solid #8BB3EA;
+	margin-top: 10%;
+	padding: 10px;
+	text-decoration: none;
+}
+
+#button:hover {
+    background-color: #3F83E0 !important;
+    color: #DDD !important;
+	border: 2px solid #8BB3EA;
+}
+
+/* ----------- SKILL SECTION ---------- */
+#skill {
+	background-color: #DDD;
+	color: #BD4150;
+	padding-bottom: 5%;
+}
+
+#skill h2 {
+	font-size: 40px;
+	text-align: center;
+}
+
+#skill h3 { 
+	margin-top: 3%;
+	margin-bottom: 8px;
+}
+
+#skill h3 span {
+	font-size: 18px;
+	background-color: #BD4150;
+    color: #DDD !important;
+	font-weight: bold;
+    border-radius: 150px;
+	border: 2px ;
+	padding: 10px;
+}
+
+#skill img { height: 80px;}
+
+/* ----------- CONTACT SECTION ---------- */
 #contact {
-  background-color: #8cccfa;
+	background-color: #BD4150;
+	color: #DDD;
+	padding: 10% 0 11% 2%;
 }
 
-footer {
-  background-color: #0099ff;
-  padding: 20px;
+#contact h2 {
+	margin-bottom: 20px;
+	font-size: 40px;
+	text-align: center;
+}
+
+#contact p {
+	font-size: 24px;
+	margin-bottom: 10px;
+}
+
+#contact a { color: #5388d1; }
+
+#contact img { width: 450px; }
+
+/* ----------- PROJECTS SECTION ---------- */
+#projects {
+	background-color: #D76B70;
+	color: #DDD;
+	padding: 5% 0 5%;
+}
+
+#projects h2 {
+	margin-bottom: 20px;
+	font-size: 40px;
+	text-align: center;
+}
+
+#sort-category {
+	background-color: #D76B70 !important;
+	margin-bottom: 1%; 
+}
+
+#sort-category .nav-link {
+	background-color: #D76B70 !important; 
+    color: #aa3442 !important;
+    font-size: 20px;
+    padding: 10px 50px !important;
+}
+
+#projects .nav-item { text-align: center;}
+
+#projects .nav-link:hover { color: #fda2a7 !important; }
+
+#projects .nav-link.active-sort {
+    border-bottom: 3px solid #DDD;
+    color: #DDD !important;
+}
+
+#projects img { 
+	border-radius: 10px;
+	border: 2px solid #DDD;
+	margin-top: 2%; 
+}
+
+#button2 span {
+    background-color: #BD4150 !important;
+	color: #DDD;
+    font-style: bold !important;
+	border: 1px solid #DDD;
+    border-radius: 5px;
+	margin-right: 5px;
+	margin-bottom: 25px;
+	padding: 10px;
+	text-decoration: none;
+	display: inline-block;
+}
+
+#button2:hover span {
+    background-color: #DDD !important;
+    color: #BD4150 !important;
+	border: 1px solid #BD4150;
 }
