--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ table {
 #banner p {
 	font-size: 18px;
 	margin-bottom: 10px;
+	line-height: 26px;
 }
 
 strong { 
@@ -139,28 +140,6 @@ strong {
 }
 
 #skill img { height: 80px;}
-
-/* ----------- CONTACT SECTION ---------- */
-#contact {
-	background-color: #BD4150;
-	color: #DDD;
-	padding: 10% 0 11% 2%;
-}
-
-#contact h2 {
-	margin-bottom: 20px;
-	font-size: 40px;
-	text-align: center;
-}
-
-#contact p {
-	font-size: 24px;
-	margin-bottom: 10px;
-}
-
-#contact a { color: #5388d1; }
-
-#contact img { width: 450px; }
 
 /* ----------- PROJECTS SECTION ---------- */
 #projects {
@@ -219,4 +198,49 @@ strong {
     background-color: #DDD !important;
     color: #BD4150 !important;
 	border: 1px solid #BD4150;
+}
+
+/* ----------- CONTACT SECTION ---------- */
+#contact {
+	background-color: #BD4150;
+	color: #DDD;
+	padding: 10% 0 11% 2%;
+}
+
+#contact h2 {
+	margin-bottom: 10px;
+	font-size: 40px;
+	text-align: center;
+}
+
+#contact p {
+	font-size: 22px;
+	line-height: 26px;
+}
+
+#contact a { color: #5388d1; }
+
+#contact img { width: 450px; }
+
+@media screen and (max-width: 945px) {
+
+	#contact h2 { font-size: 34px; }
+
+	#contact p { font-size: 18px; }
+
+	#contact #button{ font-size: 13px; }
+
+	#contact img { width: 400px; }
+}
+
+@media screen and (max-width: 850px) {
+
+	#contact h2 { font-size: 32px; }
+
+	#contact p { font-size: 16px; }
+
+	#contact img { 
+		width: 360px;
+		margin-top: 35px;
+	}
 }
