--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ strong {
 
 #skill h3 { 
 	margin-top: 3%;
-	margin-bottom: 8px;
+	margin-bottom: 18px;
 }
 
 #skill h3 span {
@@ -240,7 +240,7 @@ strong {
 
 @media screen and (max-width: 945px) {
 
-	#contact h2 { font-size: 34px; }
+	#skill h2, #contact h2 { font-size: 34px; }
 
 	#contact p { font-size: 18px; }
 
